--- a/ClearMine/App.xaml
+++ b/ClearMine/App.xaml
@@ -1,4 +1,5 @@
 ﻿<Application x:Class="ClearMine.App"
+             x:ClassModifier="internal"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="UI\Dialogs\ClearMineWindow.xaml">
