--- a/ClearMine/Themes/Generic.xaml
+++ b/ClearMine/Themes/Generic.xaml
@@ -12,7 +12,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:MineCellControl}">
-                    <Grid>
+                    <Grid ToolTip="{Binding}">
                         <Border x:Name="real">
                             <ContentPresenter Content="{Binding MinesNearby}"
                                               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
