--- a/ClearMine/App.xaml
+++ b/ClearMine/App.xaml
@@ -1,11 +1,11 @@
-﻿<Application x:Class="ClearMine.App"
-             x:ClassModifier="internal"
+﻿<Application x:Class="ClearMine.App" x:ClassModifier="internal"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="UI\Dialogs\ClearMineWindow.xaml">
+             Startup="OnAppStartup">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes\Common.xaml" />
                 <ResourceDictionary Source="Themes\DefaultSkin.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
