--- a/ClearMine/Themes/Generic.xaml
+++ b/ClearMine/Themes/Generic.xaml
@@ -1,4 +1,4 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ClearMine.UI.Controls"
                     xmlns:logic="clr-namespace:ClearMine.Logic">
@@ -14,17 +14,33 @@
                 <ControlTemplate TargetType="{x:Type local:MineCellControl}">
                     <Grid ToolTip="{Binding}">
                         <Border x:Name="real">
-                            <ContentPresenter Content="{Binding MinesNearby}"
-                                              VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" />
+                            <Border RenderTransformOrigin="0.5,0.5">
+                                <Border.RenderTransform>
+                                    <ScaleTransform ScaleX="0.8"
+                                                    ScaleY="0.8"/>
+                                </Border.RenderTransform>
+                                <Border.Background>
+                                    <VisualBrush Stretch="Uniform">
+                                        <VisualBrush.Visual>
+                                            <ContentPresenter Content="{Binding MinesNearby}"
+                                                              TextBlock.FontSize="144"
+                                                              TextBlock.FontWeight="ExtraBold" />
+                                        </VisualBrush.Visual>
+                                    </VisualBrush>
+                                </Border.Background>
+                            </Border>
                         </Border>
                         <Border x:Name="cover"
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}">
-                            <Image x:Name="marker"
-                                   VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                   HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" />
+                            <Border x:Name="mark"
+                                    RenderTransformOrigin="0.5,0.5">
+                                <Border.RenderTransform>
+                                    <ScaleTransform ScaleX="0.8"
+                                                    ScaleY="0.8" />
+                                </Border.RenderTransform>
+                            </Border>
                         </Border>
                     </Grid>
                     <ControlTemplate.Triggers>
@@ -36,14 +52,14 @@
                         </DataTrigger>
                         <DataTrigger Binding="{Binding State}"
                                      Value="{x:Static logic:CellState.MarkAsMine}">
-                            <Setter TargetName="marker"
-                                    Property="Source"
+                            <Setter TargetName="mark"
+                                    Property="Background"
                                     Value="{DynamicResource FlagImage}" />
                         </DataTrigger>
                         <DataTrigger Binding="{Binding State}"
                                      Value="{x:Static logic:CellState.Question}">
-                            <Setter TargetName="marker"
-                                    Property="Source"
+                            <Setter TargetName="mark"
+                                    Property="Background"
                                     Value="{DynamicResource QuestionMark}" />
                         </DataTrigger>
                     </ControlTemplate.Triggers>
