--- a/ClearMine/UI/Dialogs/ClearMineWindow.xaml
+++ b/ClearMine/UI/Dialogs/ClearMineWindow.xaml
@@ -1,24 +1,50 @@
-﻿<Window x:Class="ClearMine.UI.Dialogs.ClearMineWindow"
-        x:ClassModifier="internal"
+﻿<Window x:Class="ClearMine.UI.Dialogs.ClearMineWindow" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:ClearMine.UI.Controls"
+        TextOptions.TextFormattingMode="Display"
+        SnapsToDevicePixels="True"
+        Title="Clear Mine"
         Loaded="OnLoaded"
-        Title="ClearMineWindow" Height="300" Width="300">
-    <Grid>
-        <ItemsControl ItemsSource="{Binding Cells}" 
+        Height="300"
+        Width="300">
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="Game">
+                <MenuItem Header="New Game" />
+                <Separator />
+                <MenuItem Header="Statistics" />
+                <Separator />
+                <MenuItem Header="Exit" />
+            </MenuItem>
+            <MenuItem Header="Tools">
+                <MenuItem Header="Appearance">
+                    <MenuItem Header="Mine" />
+                    <MenuItem Header="Flower" />
+                    <Separator />
+                    <MenuItem Header="Custom..." />
+                </MenuItem>
+                <MenuItem Header="Language">
+                    <MenuItem Header="English" />
+                    <MenuItem Header="Chinese" />
+                    <Separator />
+                    <MenuItem Header="Custom..." />
+                </MenuItem>
+                <Separator />
+                <MenuItem Header="Options" />
+            </MenuItem>
+            <MenuItem Header="Help">
+                <MenuItem Header="About" />
+            </MenuItem>
+        </Menu>
+        <ItemsControl ItemsSource="{Binding Cells}"
                       MouseDown="OnMineGroudMouseDown"
                       MouseUp="OnMineGroudMouseUp">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <UniformGrid />
+                    <UniformGrid Rows="{Binding Rows}"
+                                 Columns="{Binding Columns}" />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <local:MineCellControl />
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
         </ItemsControl>
-    </Grid>
+    </DockPanel>
 </Window>
