--- a/ClearMine/Themes/Common.xaml
+++ b/ClearMine/Themes/Common.xaml
@@ -1,8 +1,19 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ClearMine.UI.Controls"
-                    xmlns:logic="clr-namespace:ClearMine.Logic">
+                    xmlns:logic="clr-namespace:ClearMine.Logic;assembly=ClearMine.Logic">
     <DataTemplate DataType="{x:Type logic:MineCell}">
         <local:MineCellControl />
     </DataTemplate>
+
+    <ControlTemplate x:Key="ValidationErrorTemplate">
+        <Border BorderBrush="#AAFF0000"
+                BorderThickness="1">
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="4"
+                                  Color="Red" ShadowDepth="0" />
+            </Border.Effect>
+            <AdornedElementPlaceholder />
+        </Border>
+    </ControlTemplate>
 </ResourceDictionary>
