--- a/ClearMine/Themes/DefaultSkin.xaml
+++ b/ClearMine/Themes/DefaultSkin.xaml
@@ -14,10 +14,40 @@
         </VisualBrush.Visual>
     </VisualBrush>
 
+    <SolidColorBrush x:Key="DialogBackground" Color="#F0F0F0" />
+
     <Style TargetType="{x:Type Button}">
         <Setter Property="Padding"
                 Value="10,2" />
         <Setter Property="MinWidth"
                 Value="75" />
+        <Setter Property="VerticalAlignment"
+                Value="Center" />
+    </Style>
+    
+    <Style TargetType="{x:Type Label}">
+        <Setter Property="Padding"
+                Value="0" />
+        <Setter Property="VerticalAlignment"
+                Value="Center" />
+    </Style>
+
+    <Style x:Key="{x:Static MenuItem.SeparatorStyleKey}"
+           TargetType="{x:Type Separator}">
+        <Setter Property="Margin" Value="30,3,0,3" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Separator}">
+                    <Grid>
+                        <Rectangle Height="1"
+                                   Margin="0,0,1,1"
+                                   Fill="#E0E0E0" />
+                        <Rectangle Height="1"
+                                   Margin="0,1,1,0"
+                                   Fill="#FFFFFF" />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 </ResourceDictionary>
