--- a/ClearMine/Themes/Generic.xaml
+++ b/ClearMine/Themes/Generic.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ClearMine.UI.Controls"
-                    xmlns:logic="clr-namespace:ClearMine.Logic">
+                    xmlns:logic="clr-namespace:ClearMine.Logic;assembly=ClearMine.Logic">
     <Style TargetType="{x:Type local:MineCellControl}">
         <Setter Property="Foreground" Value="Transparent" />
         <Setter Property="Background" Value="Blue" />
@@ -9,15 +9,26 @@
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
+        <!--Keep the default template simple. -->
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:MineCellControl}">
-                    <Grid ToolTip="{Binding}">
-                        <Border x:Name="real">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}" />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding State}"
+                         Value="{x:Static logic:CellState.Shown}">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type local:MineCellControl}">
                             <Border RenderTransformOrigin="0.5,0.5">
                                 <Border.RenderTransform>
                                     <ScaleTransform ScaleX="0.8"
-                                                    ScaleY="0.8"/>
+                                                    ScaleY="0.8" />
                                 </Border.RenderTransform>
                                 <Border.Background>
                                     <VisualBrush Stretch="Uniform">
@@ -29,44 +40,42 @@
                                     </VisualBrush>
                                 </Border.Background>
                             </Border>
-                        </Border>
-                        <Border x:Name="cover"
-                                Background="{TemplateBinding Background}"
-                                BorderBrush="{TemplateBinding BorderBrush}"
-                                BorderThickness="{TemplateBinding BorderThickness}">
-                            <Border x:Name="mark"
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding State}"
+                         Value="{x:Static logic:CellState.MarkAsMine}">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type local:MineCellControl}">
+                            <Border Background="{DynamicResource FlagImage}"
                                     RenderTransformOrigin="0.5,0.5">
                                 <Border.RenderTransform>
                                     <ScaleTransform ScaleX="0.8"
                                                     ScaleY="0.8" />
                                 </Border.RenderTransform>
                             </Border>
-                        </Border>
-                    </Grid>
-                    <ControlTemplate.Triggers>
-                        <DataTrigger Binding="{Binding State}"
-                                     Value="{x:Static logic:CellState.Shown}">
-                            <Setter TargetName="cover"
-                                    Property="Visibility"
-                                    Value="Collapsed" />
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding State}"
-                                     Value="{x:Static logic:CellState.MarkAsMine}">
-                            <Setter TargetName="mark"
-                                    Property="Background"
-                                    Value="{DynamicResource FlagImage}" />
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding State}"
-                                     Value="{x:Static logic:CellState.Question}">
-                            <Setter TargetName="mark"
-                                    Property="Background"
-                                    Value="{DynamicResource QuestionMark}" />
-                        </DataTrigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-        <Style.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding State}"
+                         Value="{x:Static logic:CellState.Question}">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type local:MineCellControl}">
+                            <Border Background="{DynamicResource QuestionMark}"
+                                    RenderTransformOrigin="0.5,0.5">
+                                <Border.RenderTransform>
+                                    <ScaleTransform ScaleX="0.8"
+                                                    ScaleY="0.8" />
+                                </Border.RenderTransform>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </DataTrigger>
             <DataTrigger Binding="{Binding MinesNearby}"
                          Value="1">
                 <Setter Property="Foreground"
