--- a/ClearMine/UI/Dialogs/ClearMineWindow.xaml
+++ b/ClearMine/UI/Dialogs/ClearMineWindow.xaml
@@ -1,20 +1,33 @@
 ﻿<Window x:Class="ClearMine.UI.Dialogs.ClearMineWindow" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:vm="clr-namespace:ClearMine.UI.Dialogs"
+        xmlns:c="clr-namespace:ClearMine.UI.Controls"
         TextOptions.TextFormattingMode="Display"
+        WindowStartupLocation="CenterScreen"
         SnapsToDevicePixels="True"
         Title="Clear Mine"
         Loaded="OnLoaded"
         Height="300"
         Width="300">
+    <Window.CommandBindings>
+        <x:Static Member="vm:ClearMineViewModel.CloseBinding" />
+        <x:Static Member="vm:ClearMineViewModel.NewGameBinding" />
+        <x:Static Member="vm:ClearMineViewModel.StatisticsBinding" />
+        <x:Static Member="vm:ClearMineViewModel.OptionBinding" />
+        <x:Static Member="vm:ClearMineViewModel.AboutBinding" />
+    </Window.CommandBindings>
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Game">
-                <MenuItem Header="New Game" />
+                <MenuItem Header="New Game"
+                          Command="New" />
                 <Separator />
-                <MenuItem Header="Statistics" />
+                <MenuItem Header="Statistics"
+                          Command="{x:Static vm:ClearMineViewModel.ShowStatistics}" />
                 <Separator />
-                <MenuItem Header="Exit" />
+                <MenuItem Header="Exit"
+                          Command="Close" />
             </MenuItem>
             <MenuItem Header="Tools">
                 <MenuItem Header="Appearance">
@@ -30,19 +43,29 @@
                     <MenuItem Header="Custom..." />
                 </MenuItem>
                 <Separator />
-                <MenuItem Header="Options" />
+                <MenuItem Header="Options"
+                          Command="{x:Static vm:ClearMineViewModel.Option}" />
             </MenuItem>
             <MenuItem Header="Help">
-                <MenuItem Header="About" />
+                <MenuItem Header="About"
+                          Command="{x:Static vm:ClearMineViewModel.About}"/>
             </MenuItem>
         </Menu>
+        <DockPanel DockPanel.Dock="Top"
+                   LastChildFill="False"
+                   Margin="24,0">
+            <TextBlock Text="{Binding Time}" />
+            <TextBlock Text="{Binding RemainedMines}"
+                       DockPanel.Dock="Right" />
+        </DockPanel>
         <ItemsControl ItemsSource="{Binding Cells}"
                       MouseDown="OnMineGroudMouseDown"
-                      MouseUp="OnMineGroudMouseUp">
+                      MouseUp="OnMineGroudMouseUp"
+                      Margin="24,12">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <UniformGrid Rows="{Binding Rows}"
-                                 Columns="{Binding Columns}" />
+                    <c:MinesPanel Rows="{Binding Rows}"
+                                  Columns="{Binding Columns}" />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
         </ItemsControl>
