--- a/ClearMine/UI/Dialogs/StatisticsWindow.xaml
+++ b/ClearMine/UI/Dialogs/StatisticsWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="ClearMine.UI.Dialogs.StatisticsWindow" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:vm="clr-namespace:ClearMine.UI.Dialogs"
         TextOptions.TextFormattingMode="Display"
         ShowInTaskbar="False"
         SizeToContent="WidthAndHeight"
@@ -8,4 +9,71 @@
         WindowStartupLocation="CenterOwner"
         Background="{StaticResource DialogBackground}"
         Title="Clear Mine - Statistics">
+    <Window.CommandBindings>
+        <x:Static Member="vm:StatisticsViewModel.ResetBinding" />
+    </Window.CommandBindings>
+    <DockPanel Margin="12" DataContext="{Binding HistoryList}">
+        <DockPanel DockPanel.Dock="Top" Margin="0,0,0,12">
+            <ListBox ItemsSource="{Binding}"
+                     DisplayMemberPath="Level"
+                     IsSynchronizedWithCurrentItem="True"
+                     MinWidth="90" Margin="0,0,12,0" />
+            <Grid DataContext="{Binding /}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="5" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="5" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="5" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="5" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="5" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="5" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="5" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Label Margin="0,0,12,0" Grid.Row="0" Content="Game Played:" />
+                <Label Margin="0,0,12,0" Grid.Row="2" Content="Game Won:" />
+                <Label Margin="0,0,12,0" Grid.Row="4" Content="Game Won Percentage:" />
+                <Label Margin="0,0,12,0" Grid.Row="6" Content="Longest Winning Streak:" />
+                <Label Margin="0,0,12,0" Grid.Row="8" Content="Longest Losing Streak:" />
+                <Label Margin="0,0,12,0" Grid.Row="10" Content="Current Streak:" />
+                <Label Margin="0,0,12,0" Grid.Row="12" Content="Everage Score:" />
+                <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding GamePlayed}" />
+                <TextBlock Grid.Column="1" Grid.Row="2" Text="{Binding GameWon}" />
+                <TextBlock Grid.Column="1" Grid.Row="4" Text="{Binding GameWonPercentage}" />
+                <TextBlock Grid.Column="1" Grid.Row="6" Text="{Binding LongestWinning}" />
+                <TextBlock Grid.Column="1" Grid.Row="8" Text="{Binding LogestLosing}" />
+                <TextBlock Grid.Column="1" Grid.Row="10" Text="{Binding CurrentStatus}" />
+                <TextBlock Grid.Column="1" Grid.Row="12" Text="{Binding EverageScore}" />
+            </Grid>
+        </DockPanel>
+        <DockPanel DockPanel.Dock="Bottom" LastChildFill="False">
+            <Button Content="_Reset"
+                    CommandParameter="{Binding}"
+                    Command="vm:StatisticsViewModel.Reset" />
+            <Button Content="OK" IsDefault="True" IsCancel="True" DockPanel.Dock="Right" />
+        </DockPanel>
+        <DockPanel DataContext="{Binding /}" Margin="0,0,0,16">
+            <Label DockPanel.Dock="Top" Margin="0,0,0,5"
+                   Content="_Play history of selected level:" />
+            <ListView ItemsSource="{Binding Items}" MinHeight="150">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Score" Width="50"
+                                        DisplayMemberBinding="{Binding Score}" />
+                        <GridViewColumn Header="Date" Width="140"
+                                        DisplayMemberBinding="{Binding Date}" />
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </DockPanel>
+    </DockPanel>
 </Window>
