--- a/ClearMine.Framework/Themes/Generic.xaml
+++ b/ClearMine.Framework/Themes/Generic.xaml
@@ -1,6 +1,7 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ClearMine.Framework.Dialogs">
+                    xmlns:local="clr-namespace:ClearMine.Framework.Dialogs"
+                    xmlns:con="clr-namespace:ClearMine.Framework.Controls">
     <Style TargetType="{x:Type local:OptionDialog}"
            BasedOn="{StaticResource {x:Type Window}}">
         <!-- Setting the WindowStartupLocation causing an ArgumentNullException in WPF -->
@@ -48,6 +49,38 @@
                             <ContentPresenter />
                         </AdornerDecorator>
                     </DockPanel>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type con:ListSortDecorator}">
+        <Setter Property="HorizontalContentAlignment"
+                Value="Stretch" />
+        <Setter Property="VerticalContentAlignment"
+                Value="Top" />
+        <Setter Property="Foreground"
+                Value="Gray" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type con:ListSortDecorator}">
+                    <Path x:Name="path"
+                          Data="M0,1L2,1L1,0Z"
+                          Fill="{TemplateBinding Foreground}"
+                          Stroke="{TemplateBinding Foreground}"
+                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                          Width="7"
+                          Height="4"
+                          Stretch="Fill" />
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="SortDirection"
+                                 Value="Descending">
+                            <Setter TargetName="path"
+                                    Property="Data"
+                                    Value="M0,0L2,0 1,1z" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
