--- a/ClearMine/Themes/DefaultSkin.xaml
+++ b/ClearMine/Themes/DefaultSkin.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:b="clr-namespace:ClearMine.Framework.Behaviors;assembly=ClearMine.Framework">
     <VisualBrush x:Key="FlagImage"
                  Stretch="Uniform">
         <VisualBrush.Visual>
@@ -30,6 +31,10 @@
                 Value="0" />
         <Setter Property="VerticalAlignment"
                 Value="Center" />
+    </Style>
+    
+    <Style TargetType="{x:Type ListView}">
+        <Setter Property="b:SortableListViewBehavior.HeaderSort" Value="True" />
     </Style>
 
     <Style x:Key="{x:Static MenuItem.SeparatorStyleKey}"
