--- a/ClearMine/UI/Dialogs/StatisticsWindow.xaml
+++ b/ClearMine/UI/Dialogs/StatisticsWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:ClearMine.UI.Dialogs"
+        xmlns:b="clr-namespace:ClearMine.Framework.Behaviors;assembly=ClearMine.Framework"
         TextOptions.TextFormattingMode="Display"
         ShowInTaskbar="False"
         SizeToContent="WidthAndHeight"
@@ -68,8 +69,10 @@
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Score" Width="50"
+                                        b:SortableListViewBehavior.SortField="Score"
                                         DisplayMemberBinding="{Binding Score}" />
                         <GridViewColumn Header="Date" Width="140"
+                                        b:SortableListViewBehavior.SortField="Date"
                                         DisplayMemberBinding="{Binding Date}" />
                     </GridView>
                 </ListView.View>
