1. Refine ListBox and ListView Style. 2. Support Sort in ListView Header. 3. Play sound effects.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@68 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine/UI/Dialogs/ClearMineWindow.xaml
+++ b/ClearMine/UI/Dialogs/ClearMineWindow.xaml
@@ -11,6 +11,7 @@
         Width="300">
     <Window.CommandBindings>
         <x:Static Member="vm:ClearMineViewModel.CloseBinding" />
+        <x:Static Member="vm:ClearMineViewModel.RefreshBinding" />
         <x:Static Member="vm:ClearMineViewModel.NewGameBinding" />
         <x:Static Member="vm:ClearMineViewModel.StatisticsBinding" />
         <x:Static Member="vm:ClearMineViewModel.OptionBinding" />
@@ -21,6 +22,8 @@
             <MenuItem Header="Game">
                 <MenuItem Header="New Game"
                           Command="New" />
+                <MenuItem Header="Restart Game"
+                          Command="Refresh" />
                 <Separator />
                 <MenuItem Header="Statistics"
                           Command="{x:Static vm:ClearMineViewModel.ShowStatistics}" />
