1. Support showing game result.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@70 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine/Themes/DefaultSkin.xaml
+++ b/ClearMine/Themes/DefaultSkin.xaml
@@ -14,6 +14,12 @@
             <Image Source="..\Images\QuestionMark.png" />
         </VisualBrush.Visual>
     </VisualBrush>
+    
+    <VisualBrush x:Key="MineImage">
+        <VisualBrush.Visual>
+            <Image Source="..\Images\Mine.png" />
+        </VisualBrush.Visual>
+    </VisualBrush>
 
     <SolidColorBrush x:Key="DialogBackground" Color="#F0F0F0" />
 
