--- a/ClearMine/UI/Dialogs/StatisticsWindow.xaml
+++ b/ClearMine/UI/Dialogs/StatisticsWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ClearMine.UI.Dialogs.StatisticsWindow" x:ClassModifier="internal"
+﻿<Window x:Class="ClearMine.UI.Dialogs.StatisticsWindow" x:ClassModifier="internal" x:Name="root"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:ClearMine.UI.Dialogs"
@@ -13,13 +13,15 @@
     <Window.CommandBindings>
         <x:Static Member="vm:StatisticsViewModel.ResetBinding" />
     </Window.CommandBindings>
-    <DockPanel Margin="12" DataContext="{Binding HistoryList}">
+    <DockPanel Margin="12">
         <DockPanel DockPanel.Dock="Top" Margin="0,0,0,12">
-            <ListBox ItemsSource="{Binding}"
+            <ListBox ItemsSource="{Binding HistoryList}"
                      DisplayMemberPath="Level"
+                     SelectedValuePath="Level"
+                     SelectedValue="{Binding SelectedLevel}"
                      IsSynchronizedWithCurrentItem="True"
                      MinWidth="90" Margin="0,0,12,0" />
-            <Grid DataContext="{Binding /}">
+            <Grid DataContext="{Binding HistoryList./}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="5" />
@@ -53,7 +55,7 @@
                 <TextBlock Grid.Column="1" Grid.Row="6" TextAlignment="Right" Text="{Binding LongestWinning}" />
                 <TextBlock Grid.Column="1" Grid.Row="8" TextAlignment="Right" Text="{Binding LongestLosing}" />
                 <TextBlock Grid.Column="1" Grid.Row="10" TextAlignment="Right" Text="{Binding CurrentStatus}" />
-                <TextBlock Grid.Column="1" Grid.Row="12" TextAlignment="Right" Text="{Binding AverageScore}" />
+                <TextBlock Grid.Column="1" Grid.Row="12" TextAlignment="Right" Text="{Binding AverageScore, StringFormat={}{0:F2}}" />
             </Grid>
         </DockPanel>
         <DockPanel DockPanel.Dock="Bottom" LastChildFill="False">
@@ -62,11 +64,13 @@
                     Command="vm:StatisticsViewModel.Reset" />
             <Button Content="OK" IsDefault="True" IsCancel="True" DockPanel.Dock="Right" />
         </DockPanel>
-        <DockPanel DataContext="{Binding /}" Margin="0,0,0,16">
+        <DockPanel DataContext="{Binding HistoryList}" Margin="0,0,0,16">
             <Label DockPanel.Dock="Top" Margin="0,0,0,5"
                    Content="_Play history of selected level:" />
-            <ListView ItemsSource="{Binding Items}"
-                      MinHeight="150" MaxHeight="250">
+            <ListView DataContext="{Binding /}"
+                      ItemsSource="{Binding Items}"
+                      MinHeight="150" MaxHeight="250"
+                      IsSynchronizedWithCurrentItem="True">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Score" Width="50"
