--- a/ClearMine/UI/Dialogs/AboutDialog.xaml
+++ b/ClearMine/UI/Dialogs/AboutDialog.xaml
@@ -1,20 +1,33 @@
-﻿<Window x:Class="ClearMine.UI.Dialogs.AboutDialog"
-        x:ClassModifier="internal"
+﻿<Window x:Class="ClearMine.UI.Dialogs.AboutDialog" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        TextOptions.TextFormattingMode="Display"
-        ShowInTaskbar="False"
-        SizeToContent="WidthAndHeight"
-        ResizeMode="NoResize"
-        WindowStartupLocation="CenterOwner"
         Background="{StaticResource DialogBackground}"
-        Title="About ClearMine">
+        TextOptions.TextFormattingMode="Display"
+        WindowStartupLocation="CenterOwner"
+        SizeToContent="WidthAndHeight"
+        Title="About ClearMine"
+        ShowInTaskbar="False"
+        ResizeMode="NoResize">
     <DockPanel Margin="12">
         <DockPanel DockPanel.Dock="Bottom"
                    LastChildFill="False">
             <Button Content="OK"
+                    DockPanel.Dock="Right"
                     IsCancel="True"
                     IsDefault="True" />
+        </DockPanel>
+        <DockPanel Margin="0,0,0,12">
+            <Border Background="{StaticResource MineImage}"
+                    Width="48" Height="48"
+                    UseLayoutRounding="True"
+                    Margin="0,0,12,0"/>
+            <TextBlock>
+                <Run Text="Clear Mine "
+                     FontSize="16" FontWeight="Bold" />
+                Version 1.0<LineBreak />
+                <LineBreak />
+                <Run Text="Hugo Gu All Rights Reserved." />
+            </TextBlock>
         </DockPanel>
     </DockPanel>
 </Window>
