1. Support Animation. 2. Refine caching logic.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@73 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine/UI/Dialogs/ClearMineWindow.xaml
+++ b/ClearMine/UI/Dialogs/ClearMineWindow.xaml
@@ -16,6 +16,7 @@
         <x:Static Member="vm:ClearMineViewModel.StatisticsBinding" />
         <x:Static Member="vm:ClearMineViewModel.OptionBinding" />
         <x:Static Member="vm:ClearMineViewModel.AboutBinding" />
+        <x:Static Member="vm:ClearMineViewModel.FeedbackBinding" />
     </Window.CommandBindings>
     <DockPanel>
         <Menu DockPanel.Dock="Top">
@@ -49,6 +50,9 @@
                           Command="{x:Static vm:ClearMineViewModel.Option}" />
             </MenuItem>
             <MenuItem Header="Help">
+                <MenuItem Header="Send Feedback"
+                          Command="{x:Static vm:ClearMineViewModel.Feedback}"/>
+                <Separator />
                 <MenuItem Header="About"
                           Command="{x:Static vm:ClearMineViewModel.About}"/>
             </MenuItem>
