--- a/ClearMine/Themes/Common.xaml
+++ b/ClearMine/Themes/Common.xaml
@@ -1,9 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ClearMine.UI.Controls"
+                    xmlns:con="clr-namespace:ClearMine.UI.Converters"
                     xmlns:logic="clr-namespace:ClearMine.Logic;assembly=ClearMine.Logic">
+    <con:CacheStateToVisibilityConverter x:Key="CacheStateToVisibilityConverter" />
+
     <DataTemplate DataType="{x:Type logic:MineCell}">
-        <local:MineCellControl />
+        <local:MineCellControl Visibility="{Binding CachingState, Converter={StaticResource CacheStateToVisibilityConverter}}" />
     </DataTemplate>
 
     <ControlTemplate x:Key="ValidationErrorTemplate">
